--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "ETLUtils"]
+	path = ETLUtils
+	url = https://github.com/jwijffels/etlutils
+	shallow = true
+	registered = true
